<resources>
    <string name="app_name">Video Player &amp; Trending Reels</string>

    <string name="facebook_app_id">facebook_id</string>
    <string name="facebook_client_token">token_id_here</string>

    <string name="folders">Folders</string>
    <string name="show_all_video_folder_wise">Show All Video Folder Wise</string>
    <string name="videos">Videos</string>
    <string name="music">Music</string>
    <string name="settings">Settings</string>
    <string name="click_here">Click here</string>
    <string name="loading_ad">Loading Ad…</string>
    <string name="start_app">Start App</string>
    <string name="share_app">Share App</string>
    <string name="rate_us">Rate US</string>
    <string name="privacy_policy">Privacy Policy</string>


    <string name="privacypolicyapp">https://asfaqplayerapp.blogspot.com/2024/11/privacy-policy.html</string>

    <string name="video_string_setting">Browse and play videos directly from folders or your gallery, download for offline viewing, delete files to free up space, and share instantly with a single touch.</string>
    <string name="no_folder_found">No Video Found</string>
    <string name="video_thumbnail">video thumbnail</string>
    <string name="video_play_image">video play image</string>
    <string name="video_more_image">video more image</string>
    <string name="video_grid_image_thumbnail">video grid image thumbnail</string>
    <string name="grid_video_play_image">grid video play image</string>
    <string name="grid_more_image">grid more image</string>
    <string name="sort_by">Sort By</string>
    <string name="ok">Ok</string>
    <string name="search_video">Search Video</string>
    <string name="search">Search</string>
    <string name="search_for_media_files">No Search item Found…</string>
    <string name="back_from_search_video">back from search video</string>
    <string name="brightness">Brightness</string>
    <string name="sort_close_image">sort close image</string>
    <string name="play_video">Play Video</string>
    <string name="share_video">Share Video</string>
    <string name="delete_video">Delete Video</string>
    <string name="details_video">Video Info</string>
    <string name="video_info">Video Info</string>

    <string name="file_name">File Name:</string>
    <string name="location">Location:</string>
    <string name="format">Format:</string>
    <string name="size">Size:</string>
    <string name="date">Date:</string>
    <string name="resolution">Resolution:</string>
    <string name="duration">Duration:</string>

    <string name="audio_name">Name:</string>
    <string name="audio_album_name">Album Name:</string>
    <string name="audio_artist_name">Artist Name:</string>
    <string name="audio_format">Format:</string>
    <string name="audio_size">Size:</string>
    <string name="audio_duration">Duration:</string>

    <string name="date_new_to_old">Date (new to old)</string>
    <string name="date_old_to_new">Date (old to new)</string>
    <string name="name_a_to_z">Name (A to Z)</string>
    <string name="name_z_to_a">Name (Z to A)</string>
    <string name="size_small_to_big">Size (small to big)</string>
    <string name="size_big_to_small">Size (big to small)</string>
    <string name="no_folder_found1">No Folder Found</string>
    <string name="grid_folder_image">grid folder image</string>
    <string name="folder_grid_image">folder grid image</string>
    <string name="audio_info">Audio Info</string>
    <string name="trending_video">Trending Video</string>
    <string name="see_all">See All</string>
    <string name="loading">Loading…</string>
    <string name="no_video_found">No Video Found</string>
    <string name="download">Download</string>
    <string name="no_download_videos_found">No Download Video Found</string>

    <string name="video_string1">Discover, organize, and share your videos faster than ever—intuitive controls at your fingertips.</string>
    <string name="video_string2">Your videos, perfected—smart organization, seamless streaming, and instant sharing in one powerful app.</string>
    <string name="video_string3">Transform your video library—smart sorting, intelligent cleanup, and effortless sharing made simple.</string>
    <string name="video_string4">Cinematic experience meets smart storage—watch smoothly, free up space instantly, and share in seconds.</string>
    <string name="video_string5">Universal access to all your videos—download for offline viewing, smart cleanup, and one-tap sharing.</string>
    <string name="video_string6">Next-level video management—watch with zero lag, organize automatically, and share anywhere effortlessly.</string>

    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <string name="watch_your_videos_here">Watch Your Videos Here</string>
    <string name="privacy_policy_url">https://google.com</string>
</resources>