<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="@font/bold_23rd"
                    android:text="@string/sort_by"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/ivClose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/sort_close_image"
                    android:src="@drawable/ic_close_23rd"
                    app:tint="@color/black" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/tvNewToOldDate"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/stoke_bg_23rd"
                android:fontFamily="@font/outfit_medium_23rd"
                android:gravity="center"
                android:text="@string/date_new_to_old"
                android:textColor="@color/sub_text_color"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvOldToNewDate"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/stoke_bg_23rd"
                android:fontFamily="@font/outfit_medium_23rd"
                android:gravity="center"
                android:text="@string/date_old_to_new"
                android:textColor="@color/sub_text_color"
                android:textSize="18sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/tvNameAtoZ"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/stoke_bg_23rd"
                android:fontFamily="@font/outfit_medium_23rd"
                android:gravity="center"
                android:text="@string/name_a_to_z"
                android:textColor="@color/sub_text_color"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvNameZtoA"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/stoke_bg_23rd"
                android:fontFamily="@font/outfit_medium_23rd"
                android:gravity="center"
                android:text="@string/name_z_to_a"
                android:textColor="@color/sub_text_color"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/tvSmallToBigSize"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/stoke_bg_23rd"
                android:fontFamily="@font/outfit_medium_23rd"
                android:gravity="center"
                android:text="@string/size_small_to_big"
                android:textColor="@color/sub_text_color"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvBigToSmallSize"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/stoke_bg_23rd"
                android:fontFamily="@font/outfit_medium_23rd"
                android:gravity="center"
                android:text="@string/size_big_to_small"
                android:textColor="@color/sub_text_color"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tvDone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/ic_install_bg_23rd"
        android:fontFamily="@font/bold_23rd"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/ok"
        android:textColor="@color/white"
        android:textSize="17sp" />
</LinearLayout>