<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_background"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/fbadsnativenew">

        <RelativeLayout
            android:id="@+id/topBarRelative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:minHeight="50dp">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:padding="7dp"
                android:src="@drawable/ic_back_23rd" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/ivBack"
                android:fontFamily="@font/bold_23rd"
                android:text="@string/trending_video"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/videoRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/topBarRelative"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="7dp" />

        <LinearLayout
            android:id="@+id/progressLinear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/video_player_bg_23rd"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/outfit_medium_23rd"
                android:text="@string/loading"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/noDataLinear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_no_data_23rd" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/bold_23rd"
                android:text="@string/no_video_found"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/fbadsnativenew"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/transparent"
        android:minHeight="0dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            app:cardBackgroundColor="@color/app_bck_color"
            app:cardCornerRadius="0dp"
            app:cardElevation="0dp">

            <FrameLayout
                android:id="@+id/fl_adplaceholderrapp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</RelativeLayout>